--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -90,7 +90,7 @@ h6 {
 }
 
 .masthead {
-  min-height: 30rem;
+  min-height: 40rem;
   position: relative;
   display: table;
   width: 100%;
@@ -386,4 +386,20 @@ canvas{
   width:100%;
   height:100%;
   z-index:0;
+}
+
+#about {
+  padding: 15rem 0;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/bg7.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 0.3rem solid rgba(255, 255, 255, 1);
+  width: 70%;
 }
